[package]
name = "rust_android"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate_type = ["cdylib"]

#[[bin]]
#name = "hello"
#path = "src/hello.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }